fix: remove invalid text-align from waybar GTK CSS

--- a/modules/waybar/config/cool-style.css
+++ b/modules/waybar/config/cool-style.css
@@ -38,7 +38,6 @@
     transition: 100ms;
     font-size: 16px;
     font-family: "CaskaydiaCove Nerd Font", "Font Awesome 6 Free";
-    text-align: center;
 }
 
 #workspaces button.active {
